# MCULinux

./: .gitmodules
applet/: vsf_usr_cfg.h
applet/busybox/: CMakeLists.txt
applet/micropython/: CMakeLists.txt
applet/pikapython/: CMakeLists.txt
application/: CMakeLists.txt  vsf_main.c  vsf_usr_cfg.h
application/lib/: libc.c  libdl.c  libm.c  libpthread.c
board/aic8800m/: vsf_board_cfg.h
board/hpm6750evk/: vsf_board.c  vsf_board.h  vsf_board_cfg.h
board/linux/: vsf_board_cfg.h
board/win/: vsf_board.h  vsf_board_cfg.h
hardware/AIC8800M/: FEM_5G.kicad_sch  MCULinux.kicad_pro  MCULinux.kicad_sch
patch/alsa/: ms_win.patch  mswin_sdk_conflict.patch  no_asm_directive.patch  readme.md  vsf_no_mmap_wrapper.patch
patch/busybox/: hush_elif_bugfix.patch  hush_fnmatch_bugfix.patch  readme.md  vsf_applet_disable_usage_compress.patch  vsf_applet_porting.patch  vsf_porting.patch
project/aic8800/: CMakeLists.txt  workspace.code-workspace
project/hpm/: CMakeLists.txt  vsf.icf  vsf.ld
project/linux/: CMakeLists.txt  workspace.code-workspace
project/vc/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
